# python-project-49

./: .gitignore  Makefile  README.md  brain-even  brain-prime  brain-progress  brain-progression  brain_calc  brain_even  game_gcd  pyproject.toml
brain_games/: cli.py  game.py  game_engine_general.py  hello.py
brain_games/games/: game_calc.py  game_engine_general.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
