[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "my first pet-project brain_games"
authors = ["korifei071987 <korifei071987@gmail.com>"]
readme = "README.md"
packages = [
{ include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
